mark usage of project.version with FIXME, we can clean this up with proper DM usage in most places add surefire/failsafe memory configuration to parents comment out some stuff which i'm not sure is needed anymore, pending what build-automation thinks to remove or undo